--- a/vss-mobile/android/src/main/res/layout/fragment_welcome.xml
+++ b/vss-mobile/android/src/main/res/layout/fragment_welcome.xml
@@ -1,9 +1,9 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.uni_stuttgart.vss.fragments.WelcomeFragment">
+    tools:context="com.vss.fragments.SimulatorFragment">
 
 
     <TextView
@@ -21,4 +21,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
