--- a/vss-mobile/android/src/main/res/layout/persona_item.xml
+++ b/vss-mobile/android/src/main/res/layout/persona_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:gravity="center"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
@@ -20,6 +21,9 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="Name"
+        tools:ignore="HardcodedText" />
 
 </LinearLayout>
