--- a/vss-mobile/android/src/main/res/layout/activity_main.xml
+++ b/vss-mobile/android/src/main/res/layout/activity_main.xml
@@ -10,10 +10,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <WebView
-            android:id="@+id/inspector_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="450dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/materialToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="?attr/actionBarTheme"
+                app:title="Visual Deficiency Simulator"
+                app:menu="@menu/appbar_menu"
+                app:navigationIcon="@drawable/ic_home_24"
+                app:titleCentered="true" />
+
+            <WebView
+                android:id="@+id/inspector_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
 
         <com.vss.simulator.SimulatorSurfaceView
             android:id="@+id/simulator_view"
