--- a/vss-mobile/android/src/main/res/layout/activity_main.xml
+++ b/vss-mobile/android/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -46,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:clickable="true"
-        android:contentDescription="Start Simulation"
+        android:contentDescription="@string/start_simulation"
         android:focusable="true"
         android:onClick="startStopClicked"
         app:layout_constraintBottom_toBottomOf="parent"
